; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/unix/extr_linux_glimp.c_GLimp_SetGamma.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/unix/extr_linux_glimp.c_GLimp_SetGamma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { float, float, float }
%struct.TYPE_7__ = type { float }

@.str = private unnamed_addr constant [8 x i8] c"r_gamma\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"1.0\00", align 1
@glConfig = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@dpy = common dso_local global i32 0, align 4
@scrnum = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GLimp_SetGamma(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca float, align 4
  %8 = alloca %struct.TYPE_5__, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = call %struct.TYPE_7__* @Cvar_Get(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 0)
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load float, float* %10, align 4
  store float %11, float* %7, align 4
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @glConfig, i32 0, i32 0), align 4
  %13 = call i32 @assert(i32 %12)
  %14 = load float, float* %7, align 4
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  store float %14, float* %15, align 4
  %16 = load float, float* %7, align 4
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 1
  store float %16, float* %17, align 4
  %18 = load float, float* %7, align 4
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 2
  store float %18, float* %19, align 4
  %20 = load i32, i32* @dpy, align 4
  %21 = load i32, i32* @scrnum, align 4
  %22 = call i32 @XF86VidModeSetGamma(i32 %20, i32 %21, %struct.TYPE_5__* %8)
  ret void
}

declare dso_local %struct.TYPE_7__* @Cvar_Get(i8*, i8*, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @XF86VidModeSetGamma(i32, i32, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
